[package]
name = "tauri-plugin-system-fonts"
version = "2.0.0"
authors = [ "ayangweb" ]
description = "Support getting all fonts installed on your system."
keywords = ["tauri", "tauri-plugin", "font", "fonts", "system-fonts"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-system-fonts"

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"
fontdb = "0.23"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }